--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'capstone'
+            storeFile file('$rootDir/keystore.jks')
+            storePassword 'udacity'
+        }
+    }
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
@@ -13,9 +20,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        // TODO: hide token and refresh every 6 days
+        // TODO: hide token and renew every 6 days
         def apiToken = project.hasProperty('token') ? apiToken :
-                (System.getenv('TOKEN') ?: "\"\"")
+                (System.getenv('TOKEN') ?: "\"YOUR_TOKEN\"")
         buildConfigField "String", "TOKEN", apiToken
 
         vectorDrawables.useSupportLibrary = true
@@ -23,79 +30,60 @@ android {
     }
 
     buildTypes {
-
         release {
-
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
+            signingConfig signingConfigs.config
         }
-
         debug {
             testCoverageEnabled = true
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
 }
 
 dependencies {
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:28.0.0"
-    implementation "com.android.support:support-v4:"
-    implementation "com.android.support:cardview-v7:28.0.0"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation "com.android.support:design:28.0.0"
-    implementation "com.android.support:recyclerview-v7:28.0.0"
-    implementation "com.android.support:palette-v7:28.0.0"
-
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:palette-v7:28.0.0'
     // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.4.0"
-    implementation "com.google.code.gson:gson:2.8.5"
-    implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     // Okhttp
-    implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
-
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     // Picasso
-    implementation "com.squareup.picasso:picasso:2.71828"
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
     // Lifecycle
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation "android.arch.lifecycle:viewmodel:1.1.1"
-
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
     // Paging
     implementation 'android.arch.paging:runtime:1.0.1'
-
     // ButterKnife
-    implementation "com.jakewharton:butterknife:8.8.1"
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
-
     // Room
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-
     // Google Ads
-    implementation "com.google.android.gms:play-services-ads:17.1.0"
-
+    implementation 'com.google.android.gms:play-services-ads:17.1.1'
     // Google Analytics
-    implementation "com.google.android.gms:play-services-analytics:16.0.5"
-
+    implementation 'com.google.android.gms:play-services-analytics:16.0.5'
     // Fresco
-    implementation "com.facebook.fresco:fresco:1.10.0"
-    implementation "jp.wasabeef:fresco-processors:2.1.0"
-
+    implementation 'com.facebook.fresco:fresco:1.10.0'
+    implementation 'jp.wasabeef:fresco-processors:2.1.0'
     // Bottom Navigation
     implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
-
     // MarkdownView
     implementation 'com.github.tiagohm.MarkdownView:library:0.19.0'
-
     // Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
