--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,9 @@
             android:exported="false"
             android:permission="android.permission.BIND_REMOTEVIEWS"/>
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544-3347511713"/>
     </application>
 
 </manifest>
